content/modules/ROOT/examples/coolstore/base/gateway.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway-vertx
  annotations:
    app.openshift.io/connects-to: '["catalog-spring-boot","inventory-quarkus"]'
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/coolstore-demo/gateway-vertx.git'
  labels:
    app: gateway-vertx
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/instance: gateway-vertx
    app.kubernetes.io/name: vertx
    app.kubernetes.io/part-of: coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-vertx
  template:
    metadata:
      labels:
        app: gateway-vertx
    spec:
      containers:
        - name: gateway-vertx
          image: quay.io/coolstore-demo/gateway-vertx:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: gateway-vertx
  labels:
    app: gateway-vertx
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/instance: gateway-vertx
    app.kubernetes.io/part-of: coolstore
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: gateway-vertx
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gateway-vertx
  labels:
    app: gateway-vertx
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/instance: gateway-vertx
    app.kubernetes.io/part-of: coolstore
spec:
  to:
    kind: Service
    name: gateway-vertx
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
